# political-rag-poisoning

./: .gitignore  README.md  economics.txt  logs.txt
PCT/: .gitignore  LLM_PCT-0.0.1-py3-none-any.whl  PCT.py  README.md  pyproject.toml  requirements.txt
PCT/pct-assets/results/: base_gpt3.5.txt
PCT/src/LLM_PCT/: PCT.py  __init__.py  constants.py  prompts.py
PCT/src/LLM_PCT.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/auth_left/: little_red_book.txt
data/auth_right/: 12+rules+for+life+an+antidote+to+chaos.txt  machiavelli+the+prince.txt  meinkampf.txt
notebooks/: PCT.ipynb  RAG_Poisoning.ipynb
notebooks-archive/: PCT.ipynb  RAG_Poisoning.ipynb
notebooks/pct-assets/response/: gpt2.jsonl
notebooks/pct-assets/score/: gpt2.txt
poisoned_data/: auth_right.json  auth_right_temp.json  lib_left.json  lib_right.json  test.py
proof-of-concept/: PCT.py  constants.py  content.py  generators.py  main.py  models.py  requirements.txt  results.py  test-2.py  test.py  utils.py  vectordb.py  watch.py
proof-of-concept/pct-assets/examples/: auth_left.jsonl  auth_right.jsonl  lib_left.jsonl
proof-of-concept/pct-assets/response/: 4chan_llama_70b-PANDORA-EF-0.jsonl  auth_left_gpt3.5-PANDORA-EF-2.jsonl  auth_left_gpt3.5_v3.jsonl  auth_left_llama_70b-PANDORA-EF-3.jsonl  auth_right_gpt3.5-EF-poisoning.jsonl  auth_right_gpt3.5-PANDORA.jsonl  (+29 more)
trials/: content.py  evaluation.py  generators.py  main.py  models.py  requirements.txt  results.ipynb  test.py  tmp.py  utils.py  vectordb.py  watch.py
trials/poisoned_data/: auth_left.json  auth_right.json  lib_right.json
(+379 files in other folders)
